--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,3 +12,7 @@ JWT_SECRET=your-super-secret-jwt-key-change-this
 # Google Gemini AI API Key
 # Get your API key from: https://makersuite.google.com/app/apikey
 GEMINI_API_KEY=your-gemini-api-key-here
+
+# YouTube Data API Key
+# Get your API key from: https://console.developers.google.com/apis/credentials
+YOUTUBE_API_KEY=your-youtube-api-key-here
