--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,18 +1,11 @@
-# MongoDB Connection String
-# Get this from MongoDB Atlas: https://www.mongodb.com/cloud/atlas
-MONGODB_URI=mongodb+srv://username:password@cluster.xxxxx.mongodb.net/database-name?retryWrites=true&w=majority&appName=ClusterName
+PORT=5000
+MONGO_URI=mongodb://localhost:27017/learning-path
 
-# Server Port
-PORT=3000
+# Gemini AI API Key (Get from: https://makersuite.google.com/app/apikey)
+GEMINI_API_KEY=your_gemini_api_key_here
 
-# JWT Secret - Use a strong random string
-# Generate one at: https://randomkeygen.com/
-JWT_SECRET=your-super-secret-jwt-key-change-this
+# YouTube Data API v3 Key (Get from: https://console.cloud.google.com/apis/credentials)
+YOUTUBE_API_KEY=your_youtube_api_key_here
 
-# Google Gemini AI API Key
-# Get your API key from: https://makersuite.google.com/app/apikey
-GEMINI_API_KEY=your-gemini-api-key-here
-
-# YouTube Data API Key
-# Get your API key from: https://console.developers.google.com/apis/credentials
-YOUTUBE_API_KEY=your-youtube-api-key-here
+# JWT Secret for authentication
+JWT_SECRET=your_jwt_secret_key_here
